--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
         <div id="title-box">
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-
+<header>
+  <h4>PHARRELL WILLIAMS</h4>
+  <h2>HAPPY</h2>
+  <h4>| FROM DESPICABLE ME 2 |</h4>
+</header>
           <!-- Level 2 'HAPPY' Header -->
 
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
@@ -22,23 +26,27 @@
       <div id="back" class="album">
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-
+<h3>| FROM DESPICABLE ME 2 |</h3>
         <!-- Level 1 'HAPPY' Header -->
-
+<h1>HAPPY</h1>
         <!-- Level 3 'WRITTEN BY...' Header -->
-
+<h3>WRITTEN BY PHARRELL WILLIAMS</h3>
         <!-- pararaph text 'PUBLISHED BY...' -->
-
+<p>PUBLISHED BY...</p>
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
-
+<span>PHARRELLWILLIAMS.COM</span>
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-
+<img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png"
+alt="Image" 
+/>
         <!-- span text 'COLUMBIARECORDS.COM' -->
-
+<span>COLUMBIARECORDS.COM</span>
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-
+<img src="https://s3.amazonaws.com/learn-verified/sony-logo.png"
+alt="logo"
+/>
       </div>
     </div>
   </body>
